kubernetes/apps/homepage/app/deployment.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v2.4.0@sha256:643bd0be730d40f69d58028a55d1a896739333e8815786df42bc97f109ecbe61
          ports:
            - name: http
              containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          startupProbe:
            httpGet: &healthcheck
              path: /api/healthcheck
              port: http
              httpHeaders:
                - name: Host
                  value: home.jetersen.dev
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet: *healthcheck
          livenessProbe:
            httpGet: *healthcheck
            periodSeconds: 15
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: runtime
              mountPath: /app/config
            - name: config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
              readOnly: true
            - name: config
              mountPath: /app/config/services.yaml
              subPath: services.yaml
              readOnly: true
            - name: config
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
              readOnly: true
            - name: config
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml
              readOnly: true
            - name: config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
              readOnly: true
            - name: config
              mountPath: /app/config/docker.yaml
              subPath: docker.yaml
              readOnly: true
            - name: config
              mountPath: /app/config/proxmox.yaml
              subPath: proxmox.yaml
              readOnly: true
            - name: config
              mountPath: /app/config/custom.css
              subPath: custom.css
              readOnly: true
            - name: config
              mountPath: /app/config/custom.js
              subPath: custom.js
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: homepage-config
        - name: runtime
          emptyDir: {}
