kubernetes/apps/homepage/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app.kubernetes.io/name: homepage
  ports:
    - name: http
      port: 3000
      targetPort: http
