kubernetes/apps/homepage/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  annotations:
    public.external-dns.kubernetes.io/enabled: "false"
spec:
  parentRefs:
    - name: envoy-proxy
      namespace: kube-system
      sectionName: https
  hostnames:
    - home.jetersen.dev
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
